# retail-portfolio-backtesting

./: .gitignore  README.md  pyproject.toml
notebooks/: 01_strategy_comparison.ipynb  02_parameter_experiments.ipynb  03_rolling_window_analysis.ipynb  04_limit_order_research.ipynb  05_calmar_ratio_exploration.ipynb  README.md  retail_portfolio.ipynb
notebooks/data/processed/: spy_daily_1day.csv
scripts/: run.sh  run_daily_limit_research.sh  setup.sh  setup_jupyter.sh
src/retail_sp500/: __init__.py  backtest.py  cli.py  daily_data.py  data.py  engine.py  limit_cli.py  limit_orders.py  limit_plotting.py  limit_portfolio.py  live.py  metrics.py  models.py  plotting.py  research.py  risk_metrics.py  stacking.py  strategies.py
tests/: test_backtest.py  test_daily_data.py  test_data.py  test_limit_orders.py  test_limit_plotting.py  test_live.py  test_metrics_plotting.py  test_notebook.py  test_notebooks.py  test_research.py  test_risk_metrics.py  test_strategies.py
