[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "retail-sp500-backtesting"
version = "0.6.0"
description = "Auditable real-daily SPY limit-order, Calmar, and legacy allocation research"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "numpy>=1.26",
  "pandas>=2.1",
  "plotly>=5.18",
  "xlrd>=2.0.1",
  "openpyxl>=3.1",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "jupyterlab>=4.0",
  "ipykernel>=6.0",
]

[project.scripts]
sp500-backtest = "retail_sp500.cli:main"
sp500-limit-orders = "retail_sp500.limit_cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "-q"
