[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "retail-sp500-backtesting"
version = "1.0.0"
description = "One-notebook retail portfolio strategy comparison and stacking lab"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "numpy>=1.26",
  "pandas>=2.1",
  "plotly>=5.18",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "jupyterlab>=4.0",
  "ipykernel>=6.0",
]

[project.scripts]
retail-portfolio = "retail_sp500.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "-q"
